<resources>
    <string name="VendorID">6790</string>

    <string name="app_name">CSB</string>
    <string name="MainActivity">Communication Interface App for the Blind</string>
    <string name="SMSActivity">Text Messages</string>
    <string name="ReplyActivity">Reply Message</string>
    <string name="ComposeActivity">Compose Message</string>
    <string name="CallActivity">Call</string>
    <string name="ContactsListing">Contacts</string>
    <string name="SmsRecipientActivity">Select Recipient</string>
    <string name="CallerActivity">Caller</string>
    <string name="DialerActivity">Dialer</string>
    <string name="AddContactActivity">Add Contact</string>
    <string name="WelcomeMessage">Welcome to Communication Interface App for the Blind, please press the combination of A to make call or B to send text message or C to Change Emergency Default Contact number</string>
    <string name="SMSWelcomeMessage">Welcome to SMS module,
    press the following combination, I to go to next message, E to go to Previous message, A to compose message, B to reply to the current selected message</string>

    <string name="callWelcomeMessage">Welcome to Call Module,
    press the following combination, I to go to next contact, E to go to previous contact, dot 8 to call the selected contact,
        A to add new contact, B to go to dialer, alt button to go back to main menu</string>

    <string name="SmsRecipientWelcomeMessage">Please select your SMS recipient, press the combination of I to go to next contact and E to go back to previous contact</string>
    <string name="AddContactWelcomeMessage">"Welcome to add contact module, press dot 3 and 6 to switch between name and number textbox, press dot 4 to save and alt button to cancel and go back to Call Module</string>
    <string name="DialerWelcomeMessage">Welcome to dialer, press the corresponding number combination, press button 8 to dial the entered number, press shit to backspace, alt to cancel</string>

    <!--Reply-->
    <string name="ReplyWelcomeMessage">Welcome to Reply Message, press the following keys, dot 4 to send message, shift to backspace, alt to cancel and go back to sms module</string>
    <string name="SentOnReceived_RESULT_OK">Sms successfully sent!</string>
    <string name="SentOnReceived_RESULT_ERROR_GENERICFAILURE">Sms not sent! Sms Generic Failure</string>
    <string name="SentOnReceived_RESULT_ERROR_NO_SERVICE">Sms not sent! No Service</string>
    <string name="SentOnReceived_RESULT_NULL_PDU">Sms not sent! Null PDU</string>
    <string name="SentOnReceived_RESULT_RADIO_OFF">Sms could not be sent! Radio is OFF</string>
    <string name="DeliverOnReceived_ResultOK">Sms Delivered</string>
    <string name="DeliverOnReceived_ResultCancel">Sms not Delivered</string>

    <!--Compose-->
    <string name="ComposedWelcomeMessage">Welcome to Compose Message,
    press dot 3 and 6 to switch between recipient input box and message input box, press button 8 to send message, alt button to go back to SMS Module</string>
    <string name="SelectedPhoneInstruction">Please enter mobile phone number you want send message, or press ALT + SHIFT buttons to select contacts from the List</string>
    <string name="CreatingTextInstruction">You may now create your message, press all right buttons to send the composed message, press all left buttons to cancel and go back to Inbox</string>

    <!--KeyMAP Control-->
    <string name="CONTROL_CANCEL">128</string><!--ALT--><!--Cancel for All-->
    <string name="CONTROL_OK">8</string><!--Button 8--><!--SelectContact--><!--RegisteringNewContact--><!--Call-->
    <string name="CONTROL_PREVIOUS">69</string><!--E--><!--PrevContact-->
    <string name="CONTROL_NEXT">73</string><!--I--><!--NextContact-->
    <string name="CONTROL_COMPOSE">65</string><!--A--><!--AddContact-->
    <string name="CONTROL_REPLY">66</string><!--B--><!--Dialer-->
    <string name="CONTROL_SEARCH">83</string><!--S-->
    <string name="CONTROL_SPACE">192</string><!--ALT + 32-->
    <string name="CONTROL_BACKSPACE">64</string><!--SHIFT--><!--Backspace for all-->
    <string name="CONTROL_FOCUS_CHANGER">36</string><!--32 + 4--><!--Focus changer for(Note only applicable if have 2 or more text fields)-->
    <string name="CONTROL_CALL_ACTIVITY">65</string><!--A-->
    <string name="CONTROL_SMS_ACTIVITY">66</string><!--B-->
    <string name="CONTROL_EMERGENCY_ACTIVITY">67</string><!--C-->

    /*
    *CANCEL - 128(ALT) + C COMBINATION
    SEND/OK/SELECT/CALL - 128 + A COMBINATION
    SELECT CONTACT - S COMBINATION
    FOCUS CHANGER EDITTEXT - 4 + 32
    SPACE - 128(ALT) + 32
    BACKSPACE - 128(ALT) + 64 (SHIFT)
    PHONE NUMBER - 0 to 9 COMBI + 128(ALT)
    */

    <!--==========================CallActivity===============================================-->
    <string name="CONTROL_ADD_CONTACT">68</string><!--B-->
    <string name="CONTROL_DIALER">160</string><!--B-->
    <string name="CONTROL_PREV_CALL">66</string>
    <string name="CONTROL_NEXT_CALL">65</string>
    <string name="CONTROL_SELECT_CALL">64</string>
    <!--  Add_contact module    -->
    <string name="CONTROL_ADD_ADDCONTACT">68</string>
    <!--  Dialer                -->
    <string name="CONTROL_CALL_DIALER">88</string>
    <string name="CONTROL_CANCELV2">160</string>


    <string name="AddressIntro">Message From:</string>
    <string name="BodyIntro">Say\'s:</string>

    <string name="ComposeButton">Compose</string>
    <string name="PreviousButton">Prev</string>
    <string name="NextButton">Next</string>
    <string name="ReplyButton">Reply</string>
    <string name="CallDialer">Dialer</string>

    <string name="hnt_et_name">Display Name</string>
    <string name="hnt_et_mobile_phone">Mobile Phone</string>
    <string name="str_btn_add">Add Contact</string>
    <string name="cancel">Cancel</string>

    <string name="dial">1.DIAL</string>
    <string name="select_contact">2.SELECT CONTACTS</string>
    <string name="back">3. BACK</string>

    <string name="send_btn">SEND</string>
    <string name="cancel_btn">CANCEL</string>
    <string name="phone_number">Phone Number</string>
    <string name="message_here">Message Here</string>

    <string name="d1">1</string>
    <string name="d2">2</string>
    <string name="d3">3</string>
    <string name="d4">4</string>
    <string name="d5">5</string>
    <string name="d6">6</string>
    <string name="d7">7</string>
    <string name="d8">8</string>
    <string name="d9">9</string>
    <string name="d10">#</string>
    <string name="d11">*</string>
    <string name="d12">0</string>
    <string name="call">CALL</string>
    <string name="del">DELETE</string>

    <string name="call_main">CALL</string>
    <string name="sms">SMS</string>

    <string name="to">To:</string>
    <string name="send">SEND</string>
    <string name="back_1">BACK</string>

    <!--Emergency-->
    <string name="EmergencyActivity">Emergency</string>
    <string name="MainEmergency">Emergency Settings</string>
    <string name="EmergencySave">Save</string>
    <string name="EmergencyChoose">Choose from Contacts</string>
    <string name="ECallBtn">EMERGENCY Call</string>
    <string name="ETextBtn">EMERGENCY Text</string>
    <string name="EdcBtn">Change Emergency Contact</string>
    <string name="EmergencyCancel">Cancel</string>
    <string name="EmergencyMessage">SOS Contact me ASAP</string>
    <string name="EmergencyWelcome">Welcome to Emergency Module, press the combination of alt shift to search for contact, press S to save, Cancel to go back to main menu</string>
</resources>
