<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.patchie.csawttsv9.Dial_activity">

    <EditText
        android:id="@+id/ET1"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:background="@layout/rounded_border_edittext"
        android:padding="10dp"
        android:textSize="25sp"
        android:inputType="number"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableLayout>

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn2"
        android:layout_alignBottom="@+id/btn2"
        android:layout_marginEnd="11dp"
        android:layout_toStartOf="@+id/btn2"
        android:background="@android:color/darker_gray"
        android:text="@string/d1" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ET1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:background="@android:color/darker_gray"
        android:text="@string/d2" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn2"
        android:layout_alignBottom="@+id/btn2"
        android:layout_marginStart="15dp"
        android:layout_toEndOf="@+id/btn2"
        android:background="@android:color/darker_gray"
        android:text="@string/d3" />


    <Button
        android:id="@+id/btn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn5"
        android:layout_alignBottom="@+id/btn5"
        android:layout_alignStart="@+id/btn1"
        android:background="@android:color/darker_gray"
        android:text="@string/d4" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btn2"
        android:layout_below="@+id/btn2"
        android:layout_marginTop="13dp"
        android:background="@android:color/darker_gray"
        android:text="@string/d5" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn5"
        android:layout_alignBottom="@+id/btn5"
        android:layout_alignStart="@+id/btn3"
        android:background="@android:color/darker_gray"
        android:text="@string/d6" />

    <Button
        android:id="@+id/btndel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btncall"
        android:layout_marginTop="12dp"
        android:background="@android:color/holo_blue_light"
        android:text="@string/del" />

    <Button
        android:id="@+id/backbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btndel"
        android:layout_marginTop="12dp"
        android:background="@android:color/holo_blue_light"
        android:text="@string/back" />

    <Button
        android:id="@+id/btncall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btnast"
        android:layout_marginTop="17dp"
        android:background="@android:color/holo_blue_light"
        android:text="@string/call" />

    <Button
        android:id="@+id/btn7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn8"
        android:layout_alignBottom="@+id/btn8"
        android:layout_alignStart="@+id/btn4"
        android:background="@android:color/darker_gray"
        android:text="@string/d7" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btn5"
        android:layout_below="@+id/btn5"
        android:layout_marginTop="17dp"
        android:background="@android:color/darker_gray"
        android:text="@string/d8" />

    <Button
        android:id="@+id/btn9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn8"
        android:layout_alignBottom="@+id/btn8"
        android:layout_alignStart="@+id/btn6"
        android:background="@android:color/darker_gray"
        android:text="@string/d9" />

    <Button
        android:id="@+id/btnast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn0"
        android:layout_alignBottom="@+id/btn0"
        android:layout_alignStart="@+id/btn7"
        android:background="@android:color/darker_gray"
        android:text="@string/d11" />

    <Button
        android:id="@+id/btn0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btn8"
        android:layout_below="@+id/btn8"
        android:layout_marginTop="13dp"
        android:background="@android:color/darker_gray"
        android:text="@string/d12" />

    <Button
        android:id="@+id/btnhash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn0"
        android:layout_alignBottom="@+id/btn0"
        android:layout_alignStart="@+id/btn9"
        android:background="@android:color/darker_gray"
        android:text="@string/d10" />


</RelativeLayout>
