<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.patchie.csawttsv9.CallActivity">

    <Button
        android:id="@+id/dialbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/scbtn"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="36dp"
        android:background="@android:color/holo_blue_light"
        android:text="@string/dial"
        android:onClick="Dial_btn_OnClick_Event"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="59dp"
        tools:layout_editor_absoluteY="172dp" />

    <Button
        android:id="@+id/scbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:background="@android:color/holo_blue_light"
        android:text="@string/select_contact"
        android:onClick="SelectCon_btn_OnClick_Event"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="191dp"
        tools:layout_editor_absoluteY="172dp" />

    <Button
        android:id="@+id/backbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/scbtn"
        android:layout_marginTop="33dp"
        android:background="@android:color/holo_blue_light"
        android:text="@string/back" />

</RelativeLayout>
