<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.patchie.csawttsv9.SMSActivity">


    <ListView
        android:id="@+id/messages"
        android:layout_width="368dp"
        android:layout_height="0dp"
        android:layout_marginBottom="6dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="1dp"
        app:layout_constraintBottom_toTopOf="@+id/ComposeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ComposeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/holo_blue_light"
        android:onClick="ComposeOnClickEvent"
        android:text="@string/ComposeButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/UpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light"
        android:onClick="PreviousButtonOnClickEvent"
        android:text="@string/PreviousButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/DownButton"
        app:layout_constraintStart_toEndOf="@+id/ComposeButton"
        app:layout_constraintTop_toBottomOf="@+id/messages"
        app:layout_constraintVertical_bias="0.272" />

    <Button
        android:id="@+id/DownButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light"
        android:onClick="NextButtonOnClickEvent"
        android:text="@string/NextButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ReplyButton"
        app:layout_constraintStart_toEndOf="@+id/UpButton"
        app:layout_constraintTop_toBottomOf="@+id/messages"
        app:layout_constraintVertical_bias="0.272" />

    <Button
        android:id="@+id/ReplyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light"
        android:onClick="ReplyButtonOnClickEvent"
        android:text="@string/ReplyButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/DownButton"
        app:layout_constraintTop_toBottomOf="@+id/messages"
        app:layout_constraintVertical_bias="0.272" />
</android.support.constraint.ConstraintLayout>
